# openairinterface5g

./: .gitignore  CMakeLists.txt  README.md  rbconfig.raw  reconfig.raw
common/: 5g_platform_types.h  CMakeLists.txt  instrumentation.h  platform_constants.h  platform_types.h  ran_context.h
common/config/: config_common.c  config_common.h  config_load_configmodule.c  config_load_configmodule.h  config_paramdesc.h
common/config/libconfig/: config_libconfig.c
common/config/yaml/: CMakeLists.txt  config_yaml.cpp
common/config/yaml/tests/: CMakeLists.txt  malformed.yaml  test_ipv4.yaml  test_read_mapping_as_list.yaml  test_read_str_as_int.yaml  test_yaml_config.cpp
common/utils/: CMakeLists.txt  load_module_shlib.c  load_module_shlib.h  oai_asn1.h  time_meas.c  time_meas.h  tun_if.c  tun_if.h  utils.c  utils.h
common/utils/LOG/: CMakeLists.txt  log.c  log.h
common/utils/LOG/DOC/: rtusage.md
common/utils/T/: CMakeLists.txt  T.h  T_messages.txt
common/utils/T/DOC/T/: basic.md  wireshark.md
common/utils/T/tracer/: event.c  event.h  extract_config.c  macpdu2wireshark.c  multi.c  record.c  replay.c
common/utils/T/tracer/hacks/: Makefile  dump_nack_signal.c  multi-rru-clean.c  time_meas.c
common/utils/actor/: CMakeLists.txt  README.md  actor.c  actor.h
common/utils/actor/tests/: CMakeLists.txt  test_actor.cpp
common/utils/barrier/: CMakeLists.txt  barrier.c  barrier.h
common/utils/barrier/tests/: CMakeLists.txt  test_barrier.cpp
common/utils/ds/: byte_array.c  byte_array.h  seq_arr.h
common/utils/nr/: CMakeLists.txt  nr_common.c  nr_common.h
common/utils/ocp_itti/: intertask_interface.cpp  intertask_interface.h
common/utils/shm_iq_channel/: CMakeLists.txt  shm_td_iq_channel.c  shm_td_iq_channel.h
common/utils/shm_iq_channel/tests/: CMakeLists.txt  test_shm_td_iq_channel.c
common/utils/telnetsrv/: CMakeLists.txt  telnetsrv.c  telnetsrv_ci.c  telnetsrv_ciUE.c  telnetsrv_o1.c  telnetsrv_proccmd.c  telnetsrv_rrc.c
common/utils/telnetsrv/DOC/: telneto1.md  telnetsrv.md
common/utils/threadPool/: CMakeLists.txt  bounded_notified_fifo.h  notified_fifo.h  pthread_utils.h  task.h  task_ans.c  task_ans.h  thread-pool.c  thread-pool.h  thread-pool.md
common/utils/threadPool/test/: test_thread-pool.c
common/utils/time_manager/: CMakeLists.txt  time_client.c  time_client.h  time_manager.c  time_manager.h  time_server.c  time_server.h  time_source.c  time_source.h
common/utils/time_manager/tests/: CMakeLists.txt  test_auto.c  test_manual.c
common/utils/websrv/: CMakeLists.txt  websrv.c  websrv_scope.c
common/utils/websrv/DOC/: websrvuse.md
nfapi/open-nFAPI/fapi/: CMakeLists.txt
nfapi/open-nFAPI/fapi/inc/: nr_fapi.h  nr_fapi_p5.h  nr_fapi_p5_utils.h  nr_fapi_p7.h  nr_fapi_p7_utils.h
nfapi/open-nFAPI/fapi/src/: nr_fapi.c  nr_fapi_p5.c  nr_fapi_p5_utils.c  nr_fapi_p7.c  nr_fapi_p7_utils.c
openair1/PHY/CODING/: 3gpplte_sse.c  3gpplte_turbo_decoder_avx2_16bit.c  3gpplte_turbo_decoder_sse.c  3gpplte_turbo_decoder_sse_16bit.c  3gpplte_turbo_decoder_sse_8bit.c  CMakeLists.txt  ccoding_byte_lte.c  coding_defs.h  nrLDPC_defs.h  nrLDPC_extern.h  nr_polar_init.c  nr_segmentation.c  viterbi.c  viterbi_lte.c
openair1/PHY/CODING/DOC/: LDPCImplementation.md
openair1/PHY/CODING/TESTBENCH/: ldpctest.c  pdcch_test.c  polartest.c  smallblocktest.c
openair1/PHY/CODING/nrLDPC_coding/: CMakeLists.txt  nrLDPC_coding_interface.h  nrLDPC_coding_interface_load.c
openair1/PHY/CODING/nrLDPC_coding/nrLDPC_coding_segment/: CMakeLists.txt  nrLDPC_coding_segment_decoder.c  nrLDPC_coding_segment_encoder.c  nrLDPC_load.c  nr_rate_matching.c  nr_rate_matching.h
openair1/PHY/CODING/nrLDPC_decoder/: nrLDPC_decoder.c  nrLDPC_decoder_CL.c  nrLDPC_decoder_offload.c  nrLDPC_types.h  nrLDPCdecoder_defs.h
openair1/PHY/CODING/nrLDPC_decoder_LYC/: nrLDPC_decoder_LYC.cu
openair1/PHY/CODING/nrLDPC_encoder/: ldpc384_simd512_byte.c  ldpc_encode_parity_check.c  ldpc_encoder.c  ldpc_encoder_optim8segmulti.c  ldpc_generate_coefficient.c
openair1/PHY/CODING/nrPolar_tools/: nr_polar_decoder.c  nr_polar_decoding_tools.c  nr_polar_defs.h  nr_polar_encoder.c  nr_polar_interleaving_pattern.c  nr_polar_procedures.c
openair1/PHY/CODING/tests/: CMakeLists.txt
openair1/PHY/TOOLS/tests/: CMakeLists.txt  test_log2_approx.cpp  test_oai_arith_operations.cpp  test_simde_operations.cpp  test_sse_intrinsics.cpp  test_vector_op.cpp
openair2/E1AP/: CMakeLists.txt  e1ap.c  e1ap.h  e1ap_common.c  e1ap_common.h  e1ap_setup.c
openair2/E1AP/MESSAGES/: CMakeLists.txt
openair2/E1AP/lib/: CMakeLists.txt  e1ap_bearer_context_management.c  e1ap_bearer_context_management.h  e1ap_interface_management.c  e1ap_interface_management.h  e1ap_lib_common.c  e1ap_lib_common.h  e1ap_lib_includes.h
openair2/E1AP/tests/: CMakeLists.txt  e1ap_lib_test.c
openair2/E2AP/RAN_FUNCTION/: CMakeLists.txt
openair2/E2AP/RAN_FUNCTION/CUSTOMIZED/: ran_func_gtp.c  ran_func_mac.c  ran_func_pdcp.c  ran_func_rlc.c
openair2/E2AP/RAN_FUNCTION/O-RAN/: ran_func_kpm.c  ran_func_rc.c  ran_func_rc_extern.h  ran_func_rc_subs.c  ran_func_rc_subs.h
openair2/M2AP/MESSAGES/: CMakeLists.txt
openair2/XNAP/MESSAGES/: CMakeLists.txt
openair3/LPP/MESSAGES/: CMakeLists.txt
openair3/NAS/NR_UE/: CMakeLists.txt  nr_nas_msg.c  nr_nas_msg.h  nr_nas_msg_sim.c  nr_nas_msg_sim.h
openair3/NAS/NR_UE/5GS/: CMakeLists.txt  NR_NAS_defs.h  fgs_nas_lib.c  fgs_nas_utils.h
openair3/NRPPA/MESSAGES/: CMakeLists.txt
radio/fhi_72/: CMakeLists.txt  README.md  armral_bfp_compression.c  armral_bfp_compression.h  oaioran.c  oaioran.h  oran-config.c  oran-config.h  oran-init.c  oran-init.h  oran-params.h  oran_isolate.c  oran_isolate.h
radio/fhi_72/mplane/: CMakeLists.txt  config-mplane.c  config-mplane.h  connect-mplane.c  connect-mplane.h  get-mplane.c  get-mplane.h  init-mplane.c  init-mplane.h  rpc-send-recv.c  rpc-send-recv.h  ru-mplane-api.c  ru-mplane-api.h  subscribe-mplane.c  subscribe-mplane.h
radio/fhi_72/mplane/xml/: get-xml.c  get-xml.h
radio/fhi_72/mplane/yang/: create-yang-config.c  create-yang-config.h  get-yang.c  get-yang.h
(+1158 files in other folders)
